@@ -1,6 +1,7 @@
 
 Version 1.2.3 : April 12, 2016
 
+    -Fixed excessive flickering after resizing rule dialogs
     -Duplicated rules now inserted under selection
     -Alphabetized save/load system knowledge dialog
     -Added "Fire Suppression Event Probability" to save/load sys knowledge
